Fix minor detail.

--- a/1y/1s/schedule/schedule_1y_1s.tex
+++ b/1y/1s/schedule/schedule_1y_1s.tex
@@ -28,7 +28,7 @@
 \NewAppointment{ESR}{MediumPurple1}{black}
 \NewAppointment{MFES}{SteelBlue1}{black}
 \NewAppointment{RAS}{RosyBrown1}{black}
-\begin{schedule}[MEI - 1st year - 1st semester - 2021/2022]
+\begin{schedule}[MEI - $1^{\textrm{\small st}}$ year - $1^{\textrm{\small st}}$ semester - 2021/2022]
 
     %%  MONDAYS
     \TMFES{\textbf{  MFES}}{\\ T1 \; [Ed. 1 - 0.08]}{M}{08:00-10:00}
