--- a/1y/1s/schedule/schedule_1y_1s.tex
+++ b/1y/1s/schedule/schedule_1y_1s.tex
@@ -28,27 +28,27 @@
 \NewAppointment{ESR}{MediumPurple1}{black}
 \NewAppointment{MFES}{SteelBlue1}{black}
 \NewAppointment{RAS}{RosyBrown1}{black}
-\begin{schedule}[MEI - $1^{\textrm{\small st}}$ year - $1^{\textrm{\small st}}$ semester - 2021/2022]
+\begin{schedule}[MEI - $1^{\textrm{\small st}}$ year - $1^{\textrm{\small st}}$ semester - 2021/2022 {\color{gray}\small(Edit: 03-10-2021 14:10)} ]
 
     %%  MONDAYS
     \TMFES{\textbf{  MFES}}{\\ T1 \; [Ed. 1 - 0.08]}{M}{08:00-10:00}
     \TASCN{\textbf{  ASCN}}{\\ T1 \; [Ed. 1 - 0.08]}{M}{10:00-11:00}
-    \ASCN{\textbf{  ASCN}}{\\ PL6 \; [Ed. 7 - 0.11]}{M}{11:00-13:00}
-    \MFES{\textbf{  MFES}}{\\ TP2 \; [Ed. 1 - 1.21]}{M}{14:00-15:00}
+    \ASCN{\textbf{  ASCN}}{\\ PL1 \; [Ed. 7 - 1.09]}{M}{11:00-13:00}
+    \MFES{\textbf{  MFES}}{\\ TP2 \; [Ed. 1 - 2.05]}{M}{11:00-12:00}
     
     
     %%  TUESDAY
     \TESR{\textbf{  ESR}}{\\ T1 \; [Ed. 1 - 0.08]}{T}{8:00-9:00}
-    \ESR{\textbf{  ESR}}{\\ PL2 \; [Ed. 7 - 0.09]}{T}{9:00-11:00}
+    \ESR{\textbf{  ESR}}{\\ PL2 \; [Ed. 7 - 1.09]}{T}{9:00-11:00}
     \TRAS{\textbf{  RAS}}{\\ T1 \; [Ed. 1 - 0.08]}{T}{13:00-14:00}
-    \RAS{\textbf{  RAS}}{\\ PL4 \; [Ed. 7 - 0.08]}{T}{14:00-16:00}
-
+    
     %%  WEDNESDAY
-    \CP{\textbf{  CP}}{\\ PL4 \; [Ed. 7 - 1.10]}{W}{9:00-11:00}
+    \RAS{\textbf{  RAS}}{\\ PL1 \; [Ed. 7 - 1.09]}{W}{9:00-11:00}
+    \CP{\textbf{  CP}}{\\ PL5 \; [Ed. 7 - 1.10]}{W}{11:00-13:00}
 
     %%THURSDAY
     \TDAA{\textbf{  DAA}}{\\ T1 \; [Ed. 1 - 0.08]}{Th}{8:00-9:00}
-    \DAA{\textbf{  DAA}}{\\ PL3 \; [Ed. 7 - 1.10]}{Th}{9:00-11:00}
+    \DAA{\textbf{  DAA}}{\\ PL4 \; [Ed. 7 - 1.10]}{Th}{14:00-16:00}
     \TCP{\textbf{  CP}}{\\ T1 \; [Ed. 1 - 0.08]}{Th}{13:00-14:00}
 
 \end{schedule}
