--- a/1y/1s/schedule/schedule_1y_1s.tex
+++ b/1y/1s/schedule/schedule_1y_1s.tex
@@ -28,7 +28,7 @@
 \NewAppointment{ESR}{MediumPurple1}{black}
 \NewAppointment{MFES}{SteelBlue1}{black}
 \NewAppointment{RAS}{RosyBrown1}{black}
-\begin{schedule}[MEI - $1^{\textrm{\small st}}$ year - $1^{\textrm{\small st}}$ semester - 2021/2022 {\color{gray}\small(Edit: 03-10-2021 21:32)} ]
+\begin{schedule}[MEI - $1^{\textrm{\small st}}$ year - $1^{\textrm{\small st}}$ semester - 2021/2022 {\color{gray}\small(Edit: 03-10-2021 22:11)} ]
 
     %%  MONDAYS
     \TMFES{\textbf{  MFES}}{\\ T1 \; [Ed. 1 - 0.08]}{M}{08:00-10:00}
@@ -44,12 +44,12 @@
     
     %%  WEDNESDAY
     \RAS{\textbf{  RAS}}{\\ PL1 \; [Ed. 7 - 1.09]}{W}{9:00-11:00}
-    \CP{\textbf{  CP}}{\\ PL4 \; [Ed. 7 - 1.10]}{W}{9:00-11:00}
     
     %%THURSDAY
     \TDAA{\textbf{  DAA}}{\\ T1 \; [Ed. 1 - 0.08]}{Th}{8:00-9:00}
     \DAA{\textbf{  DAA}}{\\ PL3 \; [Ed. 7 - 1.10]}{Th}{9:00-11:00}
     \TCP{\textbf{  CP}}{\\ T1 \; [Ed. 1 - 0.08]}{Th}{13:00-14:00}
+    \CP{\textbf{  CP}}{\\ PL2 \; [Ed. 7 - 0.09]}{Th}{14:00-16:00}
 
 \end{schedule}
     
