Update schedule and calendar.

--- a/1y/1s/schedule/schedule_1y_1s.tex
+++ b/1y/1s/schedule/schedule_1y_1s.tex
@@ -46,9 +46,9 @@
     \TESR{\textbf{  ESR}}{\\ T1 \; [Ed. 1 - 0.08]}{T}{8:00-9:00}
     \ESR{\textbf{  ESR}}{\\ PL4 \; [Ed. 7 - 1.09]}{T}{9:00-11:00}
     \TRAS{\textbf{  RAS}}{\\ T1 \; [Ed. 1 - 0.08]}{T}{13:00-14:00}
+    \RAS{\textbf{  RAS}}{\\ PL4 \; [Ed. 7 - 0.08]}{T}{14:00-16:00}
     
     %%  WEDNESDAY
-    \RAS{\textbf{  RAS}}{\\ PL1 \; [Ed. 7 - 1.09]}{W}{9:00-11:00}
     
     %%THURSDAY
     \TDAA{\textbf{  DAA}}{\\ T1 \; [Ed. 1 - 0.08]}{Th}{8:00-9:00}
