--- a/1y/1s/mfes/hw1/pg47381.ipynb
+++ b/1y/1s/mfes/hw1/pg47381.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "pg47381.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -22,11 +6,11 @@
         "id": "BP61myqovDw6"
       },
       "source": [
-        "#Trabalho de casa #1\n",
+        "# Trabalho de casa #1\n",
         "\n",
         "**Data**: 11-10-2021\n",
         "\n",
-        "##Informações sobre o aluno\n",
+        "## Informações sobre o aluno\n",
         "\n",
         "**Nome**: José Pedro Ribeiro Peixoto<br>\n",
         "**Número**: PG47381<br>\n",
@@ -40,7 +24,7 @@
         "id": "12z9RXR9yHVa"
       },
       "source": [
-        "##Enunciado \n",
+        "## Enunciado \n",
         "### O \"Clube Desportivo de Ribeirão\" tem as seguintes regras:\n",
         " - Todos os sócios que usam bigode, são de Ribeirão e são casados.\n",
         " - Cada sócio do clube que não é de Ribeirão tem que usar camisola amarela.\n",
@@ -122,17 +106,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "jYKGICOo5MhX"
       },
+      "outputs": [],
       "source": [
         "!pip install python-sat[pblib,aiger]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,6 +125,16 @@
         "id": "KKkYpBc332M5",
         "outputId": "d096066c-0d72-4bfa-9f0a-94f99d791c4f"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -169,17 +164,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -234,6 +218,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,6 +226,16 @@
         "id": "reJ0tqUz4Lmg",
         "outputId": "78d99f4c-5f36-4017-d493-d9b84c087e4d"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -273,17 +268,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -297,7 +281,7 @@
         "[-1, -2, -3, 4, -5]\n",
         "```\n",
         "\n",
-        "Logo, é correta. (Já se podia esperar este resultado, dado que a nova clausula era `-1 ∨ -5`. Algo que o modelo resultante anterior já comprovava)"
+        "Logo, é correta. (Já se podia esperar este resultado, dado que a nova clausula era `-1 ∨ -5`. Algo que o modelo obtido anteriormente já comprovava)"
       ]
     },
     {
@@ -318,6 +302,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -325,6 +310,16 @@
         "id": "S_i6AzDj99lm",
         "outputId": "22f0ef5c-9eaa-47aa-cf94-355235ecc0bb"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, 3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -359,17 +354,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, 3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -404,6 +388,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -411,6 +396,16 @@
         "id": "a-UKJs0T_P_j",
         "outputId": "86165689-d3cc-45ef-db5e-46b850afb540"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -444,17 +439,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -470,5 +454,21 @@
         "Logo, é correta."
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "pg47381.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
