Update MFES homework 1.

--- a/1y/1s/mfes/hw1/pg47381.ipynb
+++ b/1y/1s/mfes/hw1/pg47381.ipynb
@@ -106,11 +106,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "jYKGICOo5MhX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "zsh:1: no matches found: python-sat[pblib,aiger]\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install python-sat[pblib,aiger]"
       ]
@@ -453,6 +461,125 @@
         "```\n",
         "Logo, é correta."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " **(d)** - Os sócios casados têm todos bigode?\n",
+        "\n",
+        " ---\n",
+        "\n",
+        " ```\n",
+        "    C -> A \n",
+        "<-> ¬C ∨ A  \n",
+        " ```\n",
+        "Acrescenta-se esta clausula ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pysat.solvers import Minisat22\n",
+        "\n",
+        "s = Minisat22()                # Cria o solver\n",
+        "\n",
+        "'''\n",
+        "A : 1\n",
+        "B : 2\n",
+        "C : 3\n",
+        "D : 4\n",
+        "E : 5\n",
+        "'''\n",
+        "\n",
+        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
+        "s.add_clause([-1, 3])          # ¬A ∨  C\n",
+        "s.add_clause([ 2, 4])          #  B ∨  D\n",
+        "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
+        "s.add_clause([-5, 2])          # ¬E ∨  B\n",
+        "s.add_clause([-2, 5])          # ¬B ∨  E\n",
+        "s.add_clause([-1,-4])          # A  ∨ ¬D\n",
+        "s.add_clause([-2, 1])          # ¬B ∨  A\n",
+        "\n",
+        "# Nova clausula\n",
+        "\n",
+        "s.add_clause([-3, 1])          # ¬C ∨ A\n",
+        "\n",
+        "if s.solve():                  # testa a satisfatibilidade\n",
+        "    print(\"SAT\")\n",
+        "    print(s.get_model())       # imprime o modelo\n",
+        "else: \n",
+        "    print(\"UNSAT\")\n",
+        "\n",
+        "s.delete()                     # apaga o solver s"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " **(e)** - A afirmação \"Ao domingo nunca há sócios a assistir aos jogos.\" é correta?\n",
+        "\n",
+        " ---\n",
+        "\n",
+        " ```\n",
+        " ¬E  \n",
+        " ```\n",
+        "Acrescenta-se esta clausula ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pysat.solvers import Minisat22\n",
+        "\n",
+        "s = Minisat22()                # Cria o solver\n",
+        "\n",
+        "'''\n",
+        "A : 1\n",
+        "B : 2\n",
+        "C : 3\n",
+        "D : 4\n",
+        "E : 5\n",
+        "'''\n",
+        "\n",
+        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
+        "s.add_clause([-1, 3])          # ¬A ∨  C\n",
+        "s.add_clause([ 2, 4])          #  B ∨  D\n",
+        "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
+        "s.add_clause([-5, 2])          # ¬E ∨  B\n",
+        "s.add_clause([-2, 5])          # ¬B ∨  E\n",
+        "s.add_clause([-1,-4])          # A  ∨ ¬D\n",
+        "s.add_clause([-2, 1])          # ¬B ∨  A\n",
+        "\n",
+        "# Nova clausula\n",
+        "\n",
+        "s.add_clause([-5])          # ¬E\n",
+        "\n",
+        "if s.solve():                  # testa a satisfatibilidade\n",
+        "    print(\"SAT\")\n",
+        "    print(s.get_model())       # imprime o modelo\n",
+        "else: \n",
+        "    print(\"UNSAT\")\n",
+        "\n",
+        "s.delete()                     # apaga o solver s"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
@@ -461,12 +588,24 @@
       "name": "pg47381.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.7 64-bit",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
