--- a/1y/1s/mfes/hw1/pg47381.ipynb
+++ b/1y/1s/mfes/hw1/pg47381.ipynb
@@ -1,32 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "pg47381.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "interpreter": {
-      "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-    },
-    "kernelspec": {
-      "display_name": "Python 3.9.7 64-bit",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.7"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -54,7 +26,7 @@
       "source": [
         "## Enunciado \n",
         "### O \"Clube Desportivo de Ribeirão\" tem as seguintes regras:\n",
-        " - Todos os sócios que usam bigode, são de Ribeirão e são casados.\n",
+        " - Todos os sócios que usam bigode são casados.\n",
         " - Cada sócio do clube que não é de Ribeirão tem que usar camisola amarela.\n",
         " - Os sócios casados não podem assistir aos jogos ao Domingo.\n",
         " - Um sócio vai aos jogos ao Domingo se e só se é de Ribeirão.\n",
@@ -80,9 +52,9 @@
         "\n",
         "### Regras\n",
         "\n",
-        "Todos os sócios que usam bigode, são de Ribeirão e são casados.\n",
+        "Todos os sócios que usam bigode são casados.\n",
         "\n",
-        "`A -> (B ∧ C)`\n",
+        "`A -> C`\n",
         "\n",
         "---\n",
         "\n",
@@ -117,9 +89,9 @@
         "### Converter para CNF\n",
         "\n",
         "```\n",
-        "     (A -> (B ∧ C)) ∧ (¬B -> D) ∧ (C -> ¬E) ∧ (E <-> B) ∧ (A ∨ ¬D) ∧ (B -> A) \n",
-        "<->  (¬A ∨ (B ∧ C)) ∧ (B ∨ D) ∧ (¬C ∨ ¬E) ∧ ((E -> B) ∧ (B -> E)) ∧ (A ∨ ¬D) ∧ (¬B ∨ A)\n",
-        "<-> (¬A ∨ B) ∧ (¬A ∨ C) ∧ (B ∨ D) ∧ (¬C ∨ ¬E) ∧ (¬E ∨ B) ∧ (¬B ∨ E) ∧ (A ∨ ¬D) ∧ (¬B ∨ A)\n",
+        "     (A -> C) ∧ (¬B -> D) ∧ (C -> ¬E) ∧ (E <-> B) ∧ (A ∨ ¬D) ∧ (B -> A) \n",
+        "<->  (¬A ∨ C) ∧ (B ∨ D) ∧ (¬C ∨ ¬E) ∧ ((E -> B) ∧ (B -> E)) ∧ (A ∨ ¬D) ∧ (¬B ∨ A)\n",
+        "<-> (¬A ∨ C) ∧ (B ∨ D) ∧ (¬C ∨ ¬E) ∧ (¬E ∨ B) ∧ (¬B ∨ E) ∧ (A ∨ ¬D) ∧ (¬B ∨ A)\n",
         "```\n"
       ]
     },
@@ -134,75 +106,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "jYKGICOo5MhX",
-        "outputId": "ed73cdc0-ee55-4c79-9440-bd124ac1c672",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jYKGICOo5MhX",
+        "outputId": "ed73cdc0-ee55-4c79-9440-bd124ac1c672"
       },
+      "outputs": [],
       "source": [
         "!pip install python-sat[pblib,aiger]"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting python-sat[aiger,pblib]\n",
-            "  Downloading python_sat-0.1.7.dev11-cp37-cp37m-manylinux2010_x86_64.whl (1.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.8 MB 8.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from python-sat[aiger,pblib]) (1.15.0)\n",
-            "Collecting pypblib>=0.0.3\n",
-            "  Downloading pypblib-0.0.4-cp37-cp37m-manylinux2014_x86_64.whl (3.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 3.4 MB 34.7 MB/s \n",
-            "\u001b[?25hCollecting py-aiger-cnf>=2.0.0\n",
-            "  Downloading py_aiger_cnf-5.0.2-py3-none-any.whl (5.2 kB)\n",
-            "Collecting py-aiger<7.0.0,>=6.0.0\n",
-            "  Downloading py_aiger-6.1.14-py3-none-any.whl (18 kB)\n",
-            "Collecting funcy<2.0,>=1.12\n",
-            "  Downloading funcy-1.16-py2.py3-none-any.whl (32 kB)\n",
-            "Collecting bidict<0.22.0,>=0.21.0\n",
-            "  Downloading bidict-0.21.3-py3-none-any.whl (36 kB)\n",
-            "Collecting attrs<21.0.0,>=20.0.0\n",
-            "  Downloading attrs-20.3.0-py2.py3-none-any.whl (49 kB)\n",
-            "\u001b[K     |████████████████████████████████| 49 kB 6.8 MB/s \n",
-            "\u001b[?25hCollecting parsimonious<0.9.0,>=0.8.1\n",
-            "  Downloading parsimonious-0.8.1.tar.gz (45 kB)\n",
-            "\u001b[K     |████████████████████████████████| 45 kB 4.1 MB/s \n",
-            "\u001b[?25hCollecting toposort<2.0,>=1.5\n",
-            "  Downloading toposort-1.7-py2.py3-none-any.whl (9.0 kB)\n",
-            "Collecting pyrsistent<0.18.0,>=0.17.0\n",
-            "  Downloading pyrsistent-0.17.3.tar.gz (106 kB)\n",
-            "\u001b[K     |████████████████████████████████| 106 kB 62.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: sortedcontainers<3.0.0,>=2.3.0 in /usr/local/lib/python3.7/dist-packages (from py-aiger<7.0.0,>=6.0.0->py-aiger-cnf>=2.0.0->python-sat[aiger,pblib]) (2.4.0)\n",
-            "Building wheels for collected packages: parsimonious, pyrsistent\n",
-            "  Building wheel for parsimonious (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for parsimonious: filename=parsimonious-0.8.1-py3-none-any.whl size=42724 sha256=d963c221506b73f932cda42b7c32287e1b8bb3e2780fec5225bfb976c8381c7b\n",
-            "  Stored in directory: /root/.cache/pip/wheels/88/5d/ba/f27d8af07306b65ee44f9d3f9cadea1db749a421a6db8a99bf\n",
-            "  Building wheel for pyrsistent (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyrsistent: filename=pyrsistent-0.17.3-cp37-cp37m-linux_x86_64.whl size=98088 sha256=c8807c834c2ef6b539d9b1fbfd2d2f9c61101817510031ca644fd0f7b82051d4\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a5/52/bf/71258a1d7b3c8cbe1ee53f9314c6f65f20385481eaee573cc5\n",
-            "Successfully built parsimonious pyrsistent\n",
-            "Installing collected packages: toposort, pyrsistent, parsimonious, funcy, bidict, attrs, py-aiger, python-sat, pypblib, py-aiger-cnf\n",
-            "  Attempting uninstall: pyrsistent\n",
-            "    Found existing installation: pyrsistent 0.18.0\n",
-            "    Uninstalling pyrsistent-0.18.0:\n",
-            "      Successfully uninstalled pyrsistent-0.18.0\n",
-            "  Attempting uninstall: attrs\n",
-            "    Found existing installation: attrs 21.2.0\n",
-            "    Uninstalling attrs-21.2.0:\n",
-            "      Successfully uninstalled attrs-21.2.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\u001b[0m\n",
-            "Successfully installed attrs-20.3.0 bidict-0.21.3 funcy-1.16 parsimonious-0.8.1 py-aiger-6.1.14 py-aiger-cnf-5.0.2 pypblib-0.0.4 pyrsistent-0.17.3 python-sat-0.1.7.dev11 toposort-1.7\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -210,6 +129,7 @@
         "id": "KKkYpBc332M5",
         "outputId": "d096066c-0d72-4bfa-9f0a-94f99d791c4f"
       },
+      "outputs": [],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -223,7 +143,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -239,17 +158,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -304,6 +212,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -311,6 +220,16 @@
         "id": "reJ0tqUz4Lmg",
         "outputId": "78d99f4c-5f36-4017-d493-d9b84c087e4d"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -343,17 +262,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -388,6 +296,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -395,6 +304,16 @@
         "id": "S_i6AzDj99lm",
         "outputId": "22f0ef5c-9eaa-47aa-cf94-355235ecc0bb"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, 3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -429,17 +348,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, 3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -474,6 +382,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -481,6 +390,16 @@
         "id": "a-UKJs0T_P_j",
         "outputId": "86165689-d3cc-45ef-db5e-46b850afb540"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -514,17 +433,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -559,13 +467,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "OJsVaby8KnNs",
-        "outputId": "5916cc78-912b-4d42-ef6e-bb42702c4f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OJsVaby8KnNs",
+        "outputId": "5916cc78-912b-4d42-ef6e-bb42702c4f51"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -599,17 +518,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -644,13 +552,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "pJCwuNp9KnN2",
-        "outputId": "7411d1f4-9c70-47e6-bc46-30f98e42b1fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pJCwuNp9KnN2",
+        "outputId": "7411d1f4-9c70-47e6-bc46-30f98e42b1fb"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
+      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -684,17 +603,6 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
       ]
     },
     {
@@ -711,5 +619,33 @@
         "Logo, é correta."
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "pg47381.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.7 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
