--- a/1y/1s/mfes/hw1/pg47381.ipynb
+++ b/1y/1s/mfes/hw1/pg47381.ipynb
@@ -1,4 +1,32 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "pg47381.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "interpreter": {
+      "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.7 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -106,30 +134,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jYKGICOo5MhX",
-        "outputId": "ed73cdc0-ee55-4c79-9440-bd124ac1c672"
+        "id": "jYKGICOo5MhX"
       },
-      "outputs": [],
       "source": [
         "!pip install python-sat[pblib,aiger]"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KKkYpBc332M5",
-        "outputId": "d096066c-0d72-4bfa-9f0a-94f99d791c4f"
+        "outputId": "238c30e4-9a8c-45c6-b0e6-a8140e3f78b1"
       },
-      "outputs": [],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -158,6 +180,17 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
       ]
     },
     {
@@ -200,36 +233,26 @@
       "source": [
         " **(a)** - A afirmação \"Quem usa bigode não pode ir ao jogo ao Domingo.\" é correta?\n",
         "\n",
+        "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja `UNSAT`, então a afirmação é verdadeira.\n",
+        "\n",
         " ---\n",
         "\n",
         " ```   \n",
-        "       A -> ¬E\n",
-        "  <-> ¬A ∨ ¬E\n",
-        " ```\n",
-        "\n",
-        " Acrescenta-se esta clausula ao código da pergunta **2.** e sse o resultado for `SAT` então a afirmação é correta. "
+        "       ¬(A -> ¬E)\n",
+        "  <-> ¬(¬A ∨ ¬E)\n",
+        "  <-> A ∧ E\n",
+        " ```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "reJ0tqUz4Lmg",
-        "outputId": "78d99f4c-5f36-4017-d493-d9b84c087e4d"
+        "outputId": "89064fd2-dc5f-4e69-bd65-dee243557e36"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
-      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -243,7 +266,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -253,7 +275,7 @@
         "s.add_clause([-2, 1])          # ¬B ∨  A\n",
         "\n",
         "# Nova clausula\n",
-        "s.add_clause([-1, -5])          # ¬A ∨ ¬E\n",
+        "s.add_clause([1, 5])          # A ∧ E\n",
         "\n",
         "if s.solve():                  # testa a satisfatibilidade\n",
         "    print(\"SAT\")\n",
@@ -262,6 +284,16 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "UNSAT\n"
+          ]
+        }
       ]
     },
     {
@@ -271,11 +303,10 @@
       },
       "source": [
         "```\n",
-        "SAT\n",
-        "[-1, -2, -3, 4, -5]\n",
+        "UNSAT\n",
         "```\n",
         "\n",
-        "Logo, é correta. (Já se podia esperar este resultado, dado que a nova clausula era `-1 ∨ -5`. Algo que o modelo obtido anteriormente já comprovava)"
+        "Logo, a afirmação é correta."
       ]
     },
     {
@@ -286,34 +317,25 @@
       "source": [
         " **(b)** - Pode um membro de camisola amarela ser casado?\n",
         "\n",
+        "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja `UNSAT`, então a afirmação é verdadeira.\n",
+        "\n",
         " ---\n",
         "\n",
         " ```\n",
-        " D ∧ C\n",
-        " ```\n",
-        "Acrescenta-se estas duas clausulas ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. \n"
+        "    ¬(D ∧ C)\n",
+        "<-> ¬D ∨ ¬C\n",
+        " ```\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_i6AzDj99lm",
-        "outputId": "22f0ef5c-9eaa-47aa-cf94-355235ecc0bb"
+        "outputId": "102db5a9-a619-4c31-b1f5-27ff095d5e39"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, 3, 4, -5]\n"
-          ]
-        }
-      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -327,7 +349,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -338,8 +359,7 @@
         "\n",
         "# Novas clausulas\n",
         "\n",
-        "s.add_clause([4])          # D\n",
-        "s.add_clause([3])          # C\n",
+        "s.add_clause([-4, -3])          # ¬D ∨ ¬C\n",
         "\n",
         "if s.solve():                  # testa a satisfatibilidade\n",
         "    print(\"SAT\")\n",
@@ -348,6 +368,17 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SAT\n",
+            "[-1, -2, -3, 4, -5]\n"
+          ]
+        }
       ]
     },
     {
@@ -358,10 +389,10 @@
       "source": [
         "```\n",
         "SAT\n",
-        "[-1, -2, 3, 4, -5]\n",
+        "[-1, -2, -3, 4, -5]\n",
         "```\n",
         "\n",
-        "Logo, é correta.\n"
+        "Logo, visto que o problema é satisfazível, então a afirmação é incorreta.\n"
       ]
     },
     {
@@ -372,34 +403,25 @@
       "source": [
         " **(c)** - A afirmação \"Afinal o clube não pode ter sócios Ribeironenses.\" é correta?\n",
         "\n",
+        "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
+        "\n",
         " ---\n",
         "\n",
         " ```\n",
-        " ¬B\n",
-        " ```\n",
-        "Acrescenta-se esta clausula ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. "
+        "    ¬¬B\n",
+        "<-> B\n",
+        " ```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-UKJs0T_P_j",
-        "outputId": "86165689-d3cc-45ef-db5e-46b850afb540"
+        "outputId": "c5827107-c325-4f3b-f40e-3c2c8343f397"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
-      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -413,7 +435,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -424,7 +445,7 @@
         "\n",
         "# Nova clausula\n",
         "\n",
-        "s.add_clause([-2])          # ¬B\n",
+        "s.add_clause([2])          # ¬B\n",
         "\n",
         "if s.solve():                  # testa a satisfatibilidade\n",
         "    print(\"SAT\")\n",
@@ -433,6 +454,16 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "UNSAT\n"
+          ]
+        }
       ]
     },
     {
@@ -442,10 +473,9 @@
       },
       "source": [
         "```\n",
-        "SAT\n",
-        "[-1, -2, -3, 4, -5]\n",
+        "UNSAT\n",
         "```\n",
-        "Logo, é correta."
+        "Logo, como é `UNSAT`, então a afirmação é correta."
       ]
     },
     {
@@ -456,35 +486,26 @@
       "source": [
         " **(d)** - Os sócios casados têm todos bigode?\n",
         "\n",
+        " Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
+        "\n",
         " ---\n",
         "\n",
         " ```\n",
-        "    C -> A \n",
-        "<-> ¬C ∨ A  \n",
-        " ```\n",
-        "Acrescenta-se esta clausula ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. "
+        "    ¬(C -> A)\n",
+        "<-> ¬(¬C ∨ A)\n",
+        "<-> C ∧ ¬A  \n",
+        " ```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OJsVaby8KnNs",
-        "outputId": "5916cc78-912b-4d42-ef6e-bb42702c4f51"
+        "outputId": "515a263f-6e63-45cd-e4c8-d588f5d4d941"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
-      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -498,7 +519,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -509,7 +529,8 @@
         "\n",
         "# Nova clausula\n",
         "\n",
-        "s.add_clause([-3, 1])          # ¬C ∨ A\n",
+        "s.add_clause([3])          # C\n",
+        "s.add_clause([-1])          # ¬A\n",
         "\n",
         "if s.solve():                  # testa a satisfatibilidade\n",
         "    print(\"SAT\")\n",
@@ -518,6 +539,17 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SAT\n",
+            "[-1, -2, 3, 4, -5]\n"
+          ]
+        }
       ]
     },
     {
@@ -542,34 +574,25 @@
       "source": [
         " **(e)** - A afirmação \"Ao domingo nunca há sócios a assistir aos jogos.\" é correta?\n",
         "\n",
+        " Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
+        "\n",
         " ---\n",
         "\n",
         " ```\n",
-        " ¬E  \n",
-        " ```\n",
-        "Acrescenta-se esta clausula ao código da pergunta 2. e sse o resultado for SAT então a afirmação é correta. "
+        "    ¬¬E  \n",
+        "<-> E\n",
+        " ```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJCwuNp9KnN2",
-        "outputId": "7411d1f4-9c70-47e6-bc46-30f98e42b1fb"
+        "outputId": "5b292db6-9097-48c8-ef7c-d65b5a48d0c4"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "SAT\n",
-            "[-1, -2, -3, 4, -5]\n"
-          ]
-        }
-      ],
       "source": [
         "from pysat.solvers import Minisat22\n",
         "\n",
@@ -583,7 +606,6 @@
         "E : 5\n",
         "'''\n",
         "\n",
-        "s.add_clause([-1, 2])          # ¬A ∨  B\n",
         "s.add_clause([-1, 3])          # ¬A ∨  C\n",
         "s.add_clause([ 2, 4])          #  B ∨  D\n",
         "s.add_clause([-3,-5])          # ¬C ∨ ¬E\n",
@@ -594,7 +616,7 @@
         "\n",
         "# Nova clausula\n",
         "\n",
-        "s.add_clause([-5])          # ¬E\n",
+        "s.add_clause([5])          # E\n",
         "\n",
         "if s.solve():                  # testa a satisfatibilidade\n",
         "    print(\"SAT\")\n",
@@ -603,6 +625,16 @@
         "    print(\"UNSAT\")\n",
         "\n",
         "s.delete()                     # apaga o solver s"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "UNSAT\n"
+          ]
+        }
       ]
     },
     {
@@ -612,40 +644,11 @@
       },
       "source": [
         "```\n",
-        "SAT\n",
-        "[-1, -2, -3, 4, -5]\n",
+        "UNSAT\n",
         "```\n",
         "\n",
-        "Logo, é correta."
+        "Logo, a afirmação é correta."
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "collapsed_sections": [],
-      "name": "pg47381.ipynb",
-      "provenance": []
-    },
-    "interpreter": {
-      "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-    },
-    "kernelspec": {
-      "display_name": "Python 3.9.7 64-bit",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.7"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
