--- a/1y/1s/mfes/hw1/pg47381.ipynb
+++ b/1y/1s/mfes/hw1/pg47381.ipynb
@@ -235,8 +235,6 @@
         "\n",
         "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja `UNSAT`, então a afirmação é verdadeira.\n",
         "\n",
-        " ---\n",
-        "\n",
         " ```   \n",
         "       ¬(A -> ¬E)\n",
         "  <-> ¬(¬A ∨ ¬E)\n",
@@ -306,7 +304,9 @@
         "UNSAT\n",
         "```\n",
         "\n",
-        "Logo, a afirmação é correta."
+        "Logo, a afirmação é correta.\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -318,8 +318,6 @@
         " **(b)** - Pode um membro de camisola amarela ser casado?\n",
         "\n",
         "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja `UNSAT`, então a afirmação é verdadeira.\n",
-        "\n",
-        " ---\n",
         "\n",
         " ```\n",
         "    ¬(D ∧ C)\n",
@@ -392,7 +390,9 @@
         "[-1, -2, -3, 4, -5]\n",
         "```\n",
         "\n",
-        "Logo, visto que o problema é satisfazível, então a afirmação é incorreta.\n"
+        "Logo, visto que o problema é satisfazível, então a afirmação é **incorreta**.\n",
+        "\n",
+        "---\n"
       ]
     },
     {
@@ -405,7 +405,6 @@
         "\n",
         "Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
         "\n",
-        " ---\n",
         "\n",
         " ```\n",
         "    ¬¬B\n",
@@ -475,7 +474,9 @@
         "```\n",
         "UNSAT\n",
         "```\n",
-        "Logo, como é `UNSAT`, então a afirmação é correta."
+        "Logo, como é `UNSAT`, então a afirmação é correta.\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -488,13 +489,13 @@
         "\n",
         " Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
         "\n",
-        " ---\n",
         "\n",
         " ```\n",
         "    ¬(C -> A)\n",
         "<-> ¬(¬C ∨ A)\n",
         "<-> C ∧ ¬A  \n",
-        " ```"
+        " ```\n",
+        " "
       ]
     },
     {
@@ -563,7 +564,9 @@
         "[-1, -2, -3, 4, -5]\n",
         "```\n",
         "\n",
-        "Logo, é correta.\n"
+        "Logo, visto que o problema é satisfazível, então a afirmação é **incorreta**.\n",
+        "\n",
+        "---\n"
       ]
     },
     {
@@ -576,7 +579,6 @@
         "\n",
         " Para verificar a validades desta pergunta, adiciona-se a sua negação ao conjunto de fórmulas do problema. Caso o resultado obtido seja UNSAT, então a afirmação é verdadeira.\n",
         "\n",
-        " ---\n",
         "\n",
         " ```\n",
         "    ¬¬E  \n",
@@ -647,7 +649,9 @@
         "UNSAT\n",
         "```\n",
         "\n",
-        "Logo, a afirmação é correta."
+        "Logo, a afirmação é correta.\n",
+        "\n",
+        "---"
       ]
     }
   ]
